<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GestionPokemon">

    <EditText
            android:layout_width="308dp"
            android:layout_height="49dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_FechaCaptura"
            android:hint="@string/lbl_fecha_captura"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_pok_poder2"
            app:layout_constraintStart_toStartOf="@+id/txt_pok_poder2"
            app:layout_constraintEnd_toEndOf="@+id/txt_pok_poder2"
            app:layout_constraintHorizontal_bias="1.0"/>

    <EditText
            android:layout_width="311dp"
            android:layout_height="47dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_pok_nivel"
            android:hint="@string/lbl_nivel"
            app:layout_constraintStart_toStartOf="@+id/txt_FechaCaptura"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_FechaCaptura"
            app:layout_constraintEnd_toEndOf="@+id/txt_FechaCaptura"
            app:layout_constraintHorizontal_bias="1.0"/>

    <Button
            android:text="@string/str_eliminarEnt"
            android:layout_width="115dp"
            android:layout_height="48dp"
            android:id="@+id/btn_eliminar"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_pok_nivel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"
            />

    <Button
            android:text="@string/str_actualizarEnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_actualizar"
            app:layout_constraintTop_toTopOf="@+id/btn_eliminar"
            app:layout_constraintBottom_toBottomOf="@+id/btn_eliminar"
            app:layout_constraintStart_toEndOf="@+id/btn_eliminar"
            android:layout_marginStart="92dp"
            app:layout_constraintVertical_bias="0.0"/>

    <EditText
            android:layout_width="313dp"
            android:layout_height="56dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_Pok_nombre"
            android:hint="@string/lbl_nom_pokemon"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.085"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="306dp"
            android:layout_height="53dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_pok_poder1"
            android:hint="@string/lbl_poder_esp_uno"
            app:layout_constraintStart_toStartOf="@+id/txt_Pok_nombre"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_Pok_nombre"
            app:layout_constraintEnd_toEndOf="@+id/txt_Pok_nombre"/>

    <EditText
            android:layout_width="307dp"
            android:layout_height="63dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_pok_poder2"
            android:hint="@string/lbl_poder_esp_dos"
            app:layout_constraintStart_toStartOf="@+id/txt_pok_poder1"
            app:layout_constraintEnd_toEndOf="@+id/txt_pok_poder1"
            app:layout_constraintTop_toBottomOf="@+id/txt_pok_poder1"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="20dp"/>
</android.support.constraint.ConstraintLayout>