<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearPokemon">

    <EditText
            android:layout_width="343dp"
            android:layout_height="45dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fecha_captura"
            android:hint="@string/lbl_fecha_captura"
            app:layout_constraintStart_toStartOf="@+id/txt_poke_poder2"
            app:layout_constraintEnd_toEndOf="@+id/txt_poke_poder2"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_poke_poder2"
            app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:layout_width="341dp"
            android:layout_height="41dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_idEntrenador"
            android:hint="@string/lbl_id_entrenador"
            app:layout_constraintStart_toStartOf="@+id/txt_poke_nivel"
            app:layout_constraintEnd_toEndOf="@+id/txt_poke_nivel"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_poke_nivel"
            app:layout_constraintHorizontal_bias="1.0"
            android:editable="true"/>

    <Button
            android:text="@string/str_guardar"
            android:layout_width="102dp"
            android:layout_height="47dp"
            android:id="@+id/btn_nuevoPokemon"
            app:layout_constraintStart_toStartOf="@+id/txt_idEntrenador"
            app:layout_constraintEnd_toEndOf="@+id/txt_idEntrenador"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_idEntrenador"
            app:layout_constraintHorizontal_bias="0.476"/>

    <EditText
            android:layout_width="341dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_poke_num"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.114"
            android:hint="@string/num_pokemon"
            />

    <EditText
            android:layout_width="341dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_poke_nombre"
            app:layout_constraintStart_toStartOf="@+id/txt_poke_num"
            app:layout_constraintEnd_toEndOf="@+id/txt_poke_num"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_poke_num"
            app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/lbl_nom_pokemon"/>

    <EditText
            android:layout_width="342dp"
            android:layout_height="43dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_Poke_poder1"
            app:layout_constraintStart_toStartOf="@+id/txt_poke_nombre"
            app:layout_constraintEnd_toEndOf="@+id/txt_poke_nombre"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_poke_nombre"
            app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/lbl_poder_esp_uno"/>

    <EditText
            android:layout_width="340dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_poke_poder2"
            app:layout_constraintStart_toStartOf="@+id/txt_Poke_poder1"
            app:layout_constraintEnd_toEndOf="@+id/txt_Poke_poder1"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_Poke_poder1"
            app:layout_constraintHorizontal_bias="1.0"
            android:hint="@string/lbl_poder_esp_dos"/>

    <EditText
            android:layout_width="344dp"
            android:layout_height="41dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_poke_nivel"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_fecha_captura"
            app:layout_constraintStart_toStartOf="@+id/txt_fecha_captura"
            app:layout_constraintEnd_toEndOf="@+id/txt_fecha_captura"
            app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/lbl_nivel"/>
</android.support.constraint.ConstraintLayout>