<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearEntrenador">

    <Button
            android:text="@string/str_guardar"
            android:layout_width="146dp"
            android:layout_height="56dp"
            android:id="@+id/btn_guardar"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_num_medallas"
            app:layout_constraintEnd_toEndOf="@+id/lbl_num_medallas"
            app:layout_constraintStart_toStartOf="@+id/lbl_num_medallas"
            app:layout_constraintHorizontal_bias="0.49"/>

    <EditText
            android:layout_width="345dp"
            android:layout_height="57dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_fechaNac_Entrenador"
            android:hint="@string/lbl_Fecha_Nac"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_ape_entrenador"
            app:layout_constraintStart_toStartOf="@+id/txt_ape_entrenador"
            app:layout_constraintEnd_toEndOf="@+id/txt_ape_entrenador"
            app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:layout_width="346dp"
            android:layout_height="49dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/lbl_num_medallas"
            android:hint="@string/lbl_num_medallas"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_fechaNac_Entrenador"
            app:layout_constraintStart_toStartOf="@+id/txt_fechaNac_Entrenador"
            app:layout_constraintEnd_toEndOf="@+id/txt_fechaNac_Entrenador"
            app:layout_constraintHorizontal_bias="1.0"/>

    <EditText
            android:layout_width="344dp"
            android:layout_height="59dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_ape_entrenador"
            android:hint="@string/lbl_apellidos_entrenador"
            app:layout_constraintStart_toStartOf="@+id/txt_nom_entrenador"
            app:layout_constraintEnd_toEndOf="@+id/txt_nom_entrenador"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_nom_entrenador"
            app:layout_constraintHorizontal_bias="1.0"/>

    <EditText
            android:layout_width="342dp"
            android:layout_height="58dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nom_entrenador"
            android:hint="@string/lbl_nombre_entrenador"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintVertical_bias="0.232"/>

</android.support.constraint.ConstraintLayout>