<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GestionEntrenadores">

    <Button
            android:text="@string/str_eliminarEnt"
            android:layout_width="109dp"
            android:layout_height="46dp"
            android:id="@+id/btn_eliminarEnt"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/switch_campeon"
            app:layout_constraintStart_toStartOf="@+id/switch_campeon"
            app:layout_constraintEnd_toEndOf="@+id/switch_campeon"
            app:layout_constraintHorizontal_bias="0.488"/>

    <Button
            android:layout_width="123dp"
            android:layout_height="45dp"
            android:id="@+id/btn_actualizarEnt"
            app:layout_constraintStart_toEndOf="@+id/btn_eliminarEnt"
            android:layout_marginStart="28dp"
            app:layout_constraintTop_toTopOf="@+id/btn_eliminarEnt"
            app:layout_constraintBottom_toBottomOf="@+id/btn_eliminarEnt"
            app:layout_constraintVertical_bias="1.0"
            android:text="@string/str_actualizarEnt"/>

    <Button
            android:text="@string/str_gestionarPok"
            android:layout_width="110dp"
            android:layout_height="58dp"
            android:id="@+id/btn_gestionarPokemon"
            app:layout_constraintTop_toBottomOf="@+id/btn_eliminarEnt"
            android:layout_marginEnd="80dp"
            app:layout_constraintStart_toStartOf="@+id/btn_eliminarEnt"
            app:layout_constraintEnd_toEndOf="@+id/btn_eliminarEnt"
            app:layout_constraintHorizontal_bias="0.012"
            android:layout_marginTop="12dp"/>

    <Button
            android:text="@string/str_crearPokemon"
            android:layout_width="131dp"
            android:layout_height="55dp"
            android:id="@+id/btn_crearPokemon"
            android:layout_marginTop="44dp"
            app:layout_constraintStart_toEndOf="@+id/btn_gestionarPokemon"
            android:layout_marginStart="28dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_gestionarPokemon"
            app:layout_constraintTop_toTopOf="@+id/btn_gestionarPokemon"
            app:layout_constraintVertical_bias="1.0"/>

    <EditText
            android:layout_width="328dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_ent_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintVertical_bias="0.099"/>

    <EditText
            android:layout_width="324dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_ent_nombre"
            app:layout_constraintStart_toStartOf="@+id/txt_ent_id"
            app:layout_constraintEnd_toEndOf="@+id/txt_ent_id"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_ent_id"
            app:layout_constraintHorizontal_bias="1.0"/>

    <EditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_ent_apellido"
            app:layout_constraintStart_toStartOf="@+id/txt_ent_nombre"
            app:layout_constraintEnd_toEndOf="@+id/txt_ent_nombre"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_ent_nombre"
            app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:layout_width="318dp"
            android:layout_height="51dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_ent_fechaNac"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_ent_apellido"
            app:layout_constraintStart_toStartOf="@+id/txt_ent_apellido"
            app:layout_constraintEnd_toEndOf="@+id/txt_ent_apellido"
            app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:layout_width="321dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_ent_Medallas"
            app:layout_constraintStart_toStartOf="@+id/txt_ent_fechaNac"
            app:layout_constraintEnd_toEndOf="@+id/txt_ent_fechaNac"
            app:layout_constraintTop_toBottomOf="@+id/txt_ent_fechaNac"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp"/>

    <Switch
            android:text="@string/lbl_campeon"
            android:layout_width="199dp"
            android:layout_height="52dp"
            android:id="@+id/switch_campeon"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_ent_Medallas"
            app:layout_constraintStart_toStartOf="@+id/txt_ent_Medallas"
            app:layout_constraintEnd_toEndOf="@+id/txt_ent_Medallas"
            app:layout_constraintHorizontal_bias="0.024"/>

</android.support.constraint.ConstraintLayout>